tests/parser/bad/cmodule-field-id-with.scilla
scilla_version 0

contract Test
()

(* 'as' should be a colon instead *)
field something as bool = False
